--- a/index.html
+++ b/index.html
@@ -1,13 +1,98 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Formulário - Grey's Anatomy</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  
+  <div class="container">
+    <div class="intro">
+      <h1><sup>Grey's</sup> Anatomy</h1>
+      <p>Esse é um formulário relacionado a série grey's anatomy.</p>
+    </div>
+
+    <form action="./">
+      <div class="form-nome-completo">
+        <div class="form-nome">
+          <label for="nome">Nome</label>
+          <input type="text" name="nome" id="nome" required>
+        </div>
+
+        <div class="form-sobrenome">
+          <label for="sobrenome">Sobrenome</label>
+          <input type="text" name="sobrenome" id="sobrenome">
+        </div>
+      </div>
+
+      <div class="email">
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" required>
+      </div>
+
+      <div class="form-assistiu">
+        <p>Você já assistiu Greys anatomy?</p>
+        <input type="radio" name="assistiu" id="assistiuGreys" value="JaAssistiu">
+        <label for="assistiuGreys">Sim</label>
+
+        <input type="radio" name="assistiu" id="naoAssistiu" value="NaoAssistiu">
+        <label for="naoAssistiu">Não</label>
+      </div>
+      
+      <p>Quais seus persongens preferidos?</p>
+      <div class="form-personagens">
+
+        <input type="checkbox" name="meredith-grey" id="meredith-grey" value="meredith grey">
+        <label for="meredith-grey">Meredith Grey</label>
+
+        <input type="checkbox" name="derek-shepherd" id="derek-shepherd" value="derek-shepherd">
+        <label for="derek-shepherd">Derek Shepherd</label>
+
+        <input type="checkbox" name="cristina-yang" id="cristina-yang" value="cristina-yang">
+        <label for="cristina-yang">Cristina Yang</label>
+
+        <input type="checkbox" name="george-omalley" id="george-omalley" value="george-omalley">
+        <label for="george-omalley">George O'malley</label>
+
+        <input type="checkbox" name="izzie-stevens" id="izzie-stevens" value="izzie-stevens">
+        <label for="izzie-stevens">Izzie Stevens</label>
+
+        <input type="checkbox" name="miranda-bailey" id="miranda-bailey" value="miranda-bailey">
+        <label for="miranda-bailey">Miranda Bailey</label>
+
+        <input type="checkbox" name="callie-torres" id="callie-torres" value="callie-torres">
+        <label for="callie-torres">Callie Torres</label>
+
+        <input type="checkbox" name="personagens" id="personagens" value="personagens">
+        <label for="personagens">Outros</label>
+      </div>
+
+      <div class="form-temporada">
+        <label for="temporadas">Quais suas temporadas preferidas?</label>
+      <select name="temporadas" id="temporadas">
+        <option value="1-5">1 a 5</option>
+        <option value="6-10">6 a 10</option>
+        <option value="11-15">11 a 15</option>
+        <option value="16-18">16 a 18</option>
+      </select>
+      </div>
+
+     <div class="form-msg">
+      <label for="msg">Fale sua opinião sobre a série:</label>
+      <textarea name="msg" id="msg" rows="5"></textarea>
+     </div>
+
+      <button type="submit">Enviar</button>
+    </form>
+
+  </div>
 </body>
+
 </html>
